--- a/android/lib/resource/src/main/res/values-es/strings.xml
+++ b/android/lib/resource/src/main/res/values-es/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">Va a enviar el informe de problemas sin indicar una forma de contacto. Para obtener una respuesta sobre el informe, necesita especificar su dirección de correo electrónico.</string>
     <string name="confirm_removal">Sí, cerrar sesión</string>
     <string name="congrats">¡Enhorabuena!</string>
-    <string name="connect">Proteger mi conexión</string>
+    <string name="connect">Conectar</string>
+    <string name="connected">Conectado</string>
     <string name="connected_using_daita">%1$s utilizando %2$s</string>
-    <string name="connecting">Conectando</string>
     <string name="connecting_to_daemon">Conectando al servicio del sistema Mullvad…</string>
+    <string name="connection_details_in">Entrada</string>
     <string name="continue_login">Iniciar sesión</string>
     <string name="copied_logs_to_clipboard">Registros copiados en el portapapeles</string>
     <string name="copied_mullvad_account_number">El número de cuenta de Mullvad se copió en el Portapapeles</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">Crear nueva lista</string>
     <string name="created_x">Creado: %1$s</string>
     <string name="creating_new_account">Creando cuenta…</string>
-    <string name="creating_secure_connection">CREANDO CONEXIÓN SEGURA</string>
     <string name="critical_error">Error crítico (precisa su atención)</string>
     <string name="current_method">Actual: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Deshabilite todos los &lt;b&gt;%1$s&lt;/b&gt; de arriba para activar este ajuste.</string>
@@ -117,12 +117,11 @@
     <string name="discard">Descartar</string>
     <string name="discard_changes">¿Descartar los cambios?</string>
     <string name="disconnect">Desconectar</string>
-    <string name="disconnecting">Desconectando</string>
+    <string name="disconnected">Desconectado</string>
     <string name="dismiss">Descartar</string>
     <string name="dns_content_blockers_custom_dns_warning">Atención: este ajuste no se puede utilizar en combinación con &lt;b&gt;Usar servidor DNS personalizado&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Al activar esta opción se evita que el dispositivo contacte con determinados dominios o sitios web que se sabe que distribuyen anuncios, malware, rastreadores y más.</string>
     <string name="dns_content_blockers_subtitle">Deshabilite &lt;b&gt;%1$s&lt;/b&gt; abajo para activar estos ajustes.</string>
-    <string name="dns_content_blockers_title">Bloqueadores de contenido DNS</string>
     <string name="dns_content_blockers_warning">Esto podría causar problemas con determinados sitios web, servicios y aplicaciones.</string>
     <string name="dont_have_an_account">¿No tiene un número de cuenta?</string>
     <string name="duplicate_address_warning">Esta dirección ya se ha introducido.</string>
@@ -151,6 +150,11 @@
     <string name="failed_to_set_current_test_error">Error al establecer el método como actual: API no accesible</string>
     <string name="failed_to_set_current_unknown_error">Error al establecer el método como actual: Razón desconocida</string>
     <string name="faqs_and_guides">Preguntas frecuentes y guías</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_dns_content_blockers">Bloqueadores de contenido DNS</string>
+    <string name="feature_lan_sharing">Uso compartido de la red local</string>
+    <string name="feature_server_ip_override">Anulación de IP de servidor</string>
+    <string name="feature_udp_2_tcp">Ofuscación</string>
     <string name="filter">Filtrar</string>
     <string name="filtered">Filtros aplicados:</string>
     <string name="foreground_notification_channel_description">Muestra el estado actual del túnel VPN</string>
@@ -165,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">Importar nuevas anulaciones podría reemplazar algunas anulaciones anteriormente importadas.</string>
     <string name="import_overrides_import">Importar</string>
     <string name="import_overrides_text_title">Importación a través de texto</string>
-    <string name="in_address">Entrada</string>
     <string name="invalid_dns_servers">Las direcciones del servidor DNS personalizado %1$s no son válidas</string>
     <string name="invalid_voucher">El código del cupón no es válido.</string>
     <string name="ipv6_unavailable">No se pudo configurar IPv6. Desactívelo en la aplicación o actívelo en el dispositivo.</string>
@@ -176,7 +179,6 @@
     <string name="list_name">Nombre de la lista</string>
     <string name="loading_connecting">Conectando...</string>
     <string name="loading_verifying">Verificando la compra…</string>
-    <string name="local_network_sharing">Uso compartido de la red local</string>
     <string name="local_network_sharing_additional_info">Lo realiza permitiendo la comnunicación de red fuera del túnel hacia rangos de emisión y multidifusión locales y también hacia y desde estos rangos de IP privados:</string>
     <string name="local_network_sharing_info">Esta característica permite el acceso a otros dispositivos de la red local, como para compartir, imprimir, transmitir, etc.</string>
     <string name="location_added">%1$s (añadido)</string>
@@ -247,12 +249,9 @@
     <string name="privacy_policy_label">Política de privacidad</string>
     <string name="problem_report_description">Para ayudarle de una forma más eficiente, se adjuntará el archivo de registro de la aplicación a este mensaje. Sus datos permanecerán protegidos y privados, ya que se anonimizan antes de enviarse a través de un canal cifrado.</string>
     <string name="providers">Proveedores</string>
-    <string name="quantum_creating_secure_connection">CREANDO CONEXIÓN CON SEGURIDAD CUÁNTICA</string>
     <string name="quantum_resistant_info_first_paragaph">Esta característica permite que el túnel de WireGuard resista posibles ataques de ordenadores cuánticos.</string>
     <string name="quantum_resistant_info_second_paragaph">Lo hace al realizar un intercambio de claves adicional usando un algoritmo cuántico seguro y combinando el resultado en el cifrado normal de WireGuard. Este paso extra utiliza aproximadamente 500 kiB de tráfico cada vez que se establece un nuevo túnel.</string>
     <string name="quantum_resistant_title">Túnel con resistencia cuántica</string>
-    <string name="quantum_secure_connection">CONEXIÓN CON SEGURIDAD CUÁNTICA</string>
-    <string name="reconnecting">Volviendo a establecer la conexión</string>
     <string name="redeem">Canjear</string>
     <string name="redeem_voucher">Canjear cupón</string>
     <string name="remove_button">Quitar</string>
@@ -262,8 +261,6 @@
     <string name="reset_to_default_button">Restablecer a valores predeterminados</string>
     <string name="save">Guardar</string>
     <string name="search_placeholder">Buscar...</string>
-    <string name="secure_connection">CONEXIÓN SEGURA</string>
-    <string name="secured">Protegido</string>
     <string name="select_location">Seleccionar ubicación</string>
     <string name="select_location_description">Mientras esté conectado, su ubicación real permanecerá oculta con una ubicación privada y segura en la región seleccionada.</string>
     <string name="select_location_empty_text_first_row">No hay resultados para &lt;b&gt;%1$s&lt;/b&gt;.</string>
@@ -275,7 +272,6 @@
     <string name="sent_contact">Si es necesario, le enviaremos un correo electrónico a %1$s</string>
     <string name="sent_thanks">¡Gracias!</string>
     <string name="server">Servidor</string>
-    <string name="server_ip_overrides">Anulación de IP de servidor</string>
     <string name="server_ip_overrides_active">Anulaciones activas</string>
     <string name="server_ip_overrides_import_by">Importar nuevas anulaciones por</string>
     <string name="server_ip_overrides_import_by_file">Archivo</string>
@@ -328,9 +324,6 @@
     <string name="udp_over_tcp_port_info">El puerto TCP al que se conectará el protocolo de ofuscación de UDP sobre TCP en el servidor VPN.</string>
     <string name="udp_over_tcp_port_title">Puerto de UDP sobre TCP</string>
     <string name="undo">Deshacer</string>
-    <string name="unsecured">No protegido</string>
-    <string name="unsecured_connection">CONEXIÓN NO SEGURA</string>
-    <string name="unsecured_vpn_permission_error">Desprotegido (sin permiso de VPN)</string>
     <string name="unsupported_version">VERSIÓN NO ADMITIDA</string>
     <string name="unsupported_version_description">Al usar esta versión obsoleta de la aplicación, es posible que su privacidad esté en riesgo. Actualice ahora.</string>
     <string name="unsupported_version_without_upgrade">Ejecuta una versión de la aplicación que no es compatible.</string>
