--- a/android/lib/resource/src/main/res/values-fi/strings.xml
+++ b/android/lib/resource/src/main/res/values-fi/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">Olet aikeissa lähettää ongelmaraportin ilman yhteystietojasi. Mikäli haluat vastauksen raporttiisi, anna sähköpostosoite.</string>
     <string name="confirm_removal">Kyllä, kirjaa laite ulos</string>
     <string name="congrats">Onnittelut!</string>
-    <string name="connect">Suojaa yhteyteni</string>
+    <string name="connect">Yhdistä</string>
+    <string name="connected">Yhdistetty</string>
     <string name="connected_using_daita">%1$s – %2$s käytössä</string>
-    <string name="connecting">Yhdistetään</string>
     <string name="connecting_to_daemon">Yhdistetään Mullvad-järjestelmäpalveluun...</string>
+    <string name="connection_details_in">Saapuva</string>
     <string name="continue_login">Jatka kirjautumista</string>
     <string name="copied_logs_to_clipboard">Lokit kopioitu leikepöydälle</string>
     <string name="copied_mullvad_account_number">Mullvad-tilin numero kopioitu leikepöydälle</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">Luo uusi luettelo</string>
     <string name="created_x">Luotu: %1$s</string>
     <string name="creating_new_account">Luodaan tiliä...</string>
-    <string name="creating_secure_connection">LUODAAN SUOJATTU YHTEYS</string>
     <string name="critical_error">Vakava virhe (vaatii huomiotasi)</string>
     <string name="current_method">Nykyinen: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Ota tämä asetus käyttöön poistamalla kaikki &lt;b&gt;%1$s&lt;/b&gt; käytöstä yllä.</string>
@@ -117,12 +117,11 @@
     <string name="discard">Hylkää</string>
     <string name="discard_changes">Hylätäänkö muokkaukset?</string>
     <string name="disconnect">Katkaise yhteys</string>
-    <string name="disconnecting">Katkaistaan yhteyttä</string>
+    <string name="disconnected">Yhteys katkaistu</string>
     <string name="dismiss">Jätä huomiotta</string>
     <string name="dns_content_blockers_custom_dns_warning">Huomio: asetusta ei voi käyttää yhdessä \"&lt;b&gt;Käytä mukautettua DNS-palvelinta&lt;/b&gt;\" -asetuksen kanssa.</string>
     <string name="dns_content_blockers_info">Kun tämä ominaisuus on käytössä, se estää laitetta ottamasta yhteyttä tiettyihin verkkotunnuksiin tai -sivustoihin, jotka tunnetaan mainosten, haittaohjelmien, seurantaohjelmien tai muiden vastaavien jakelijoina.</string>
     <string name="dns_content_blockers_subtitle">Ota nämä asetukset käyttöön poistamalla &lt;b&gt;%1$s&lt;/b&gt; käytöstä alta.</string>
-    <string name="dns_content_blockers_title">DNS-sisällönestotoiminnot</string>
     <string name="dns_content_blockers_warning">Tämä voi aiheuttaa ongelmia tietyillä verkkosivustoilla, palveluissa ja sovelluksissa.</string>
     <string name="dont_have_an_account">Eikö sinulla ole tilinumeroa?</string>
     <string name="duplicate_address_warning">Tämä osoite on annettu jo.</string>
@@ -151,6 +150,11 @@
     <string name="failed_to_set_current_test_error">Nykyisen asetus epäonnistui – APIa ei tavoiteta</string>
     <string name="failed_to_set_current_unknown_error">Nykyisen asetus epäonnistui – Tuntematon syy</string>
     <string name="faqs_and_guides">Usein kysytyt kysymykset ja oppaat</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_dns_content_blockers">DNS-sisällönestotoiminnot</string>
+    <string name="feature_lan_sharing">Paikallisen verkon jakaminen</string>
+    <string name="feature_server_ip_override">Palvelimen IP-osoitteen ohitus</string>
+    <string name="feature_udp_2_tcp">Hämäysteknologia</string>
     <string name="filter">Suodatin</string>
     <string name="filtered">Suodatettu:</string>
     <string name="foreground_notification_channel_description">Näyttää VPN-tunnelin nykyisen tilan</string>
@@ -165,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">Uusien ohitusten tuonti saattaa korvata joitain aiemmin tuotuja ohituksia.</string>
     <string name="import_overrides_import">Tuo</string>
     <string name="import_overrides_text_title">Tuo tekstinä</string>
-    <string name="in_address">Saapuva</string>
     <string name="invalid_dns_servers">Mukautetut DNS-palvelimen osoitteet %1$s ovat virheellisiä</string>
     <string name="invalid_voucher">Kuponkikoodi ei kelpaa.</string>
     <string name="ipv6_unavailable">IPv6:n määritys ei onnistunut. Poista se käytöstä sovelluksessa tai ota käyttöön laitteellasi.</string>
@@ -176,7 +179,6 @@
     <string name="list_name">Luettelon nimi</string>
     <string name="loading_connecting">Yhdistetään...</string>
     <string name="loading_verifying">Ostosta vahvistetaan...</string>
-    <string name="local_network_sharing">Paikallisen verkon jakaminen</string>
     <string name="local_network_sharing_additional_info">Ominaisuus siis sallii verkkoviestinnän tunnelin ulkopuolella paikallisille lähetys- ja monilähetysalueille sekä näillä yksityisillä IP-alueilla kumpaankin suuntaan:</string>
     <string name="local_network_sharing_info">Tämä ominaisuus mahdollistaa pääsyn muihin paikallisverkon laitteisiin esimerkiksi jakamisen, tulostamisen, suoratoiston jne. tarpeisiin.</string>
     <string name="location_added">%1$s (lisätty)</string>
@@ -247,12 +249,9 @@
     <string name="privacy_policy_label">Tietosuojakäytäntö</string>
     <string name="problem_report_description">Jotta voimme olla avuksi parhaamme mukaan, sovelluksesi lokitiedosto liitetään tähän viestiin. Tietosi pysyvät suojattuina ja yksityisinä, ja ne anonymisoidaan salatun kanavan kautta ennen lähetystä.</string>
     <string name="providers">Tarjoajat</string>
-    <string name="quantum_creating_secure_connection">LUODAAN KVANTTISUOJATTU YHTEYS</string>
     <string name="quantum_resistant_info_first_paragaph">Tämä ominaisuus tekee WireGuard-tunnelista kestävän kvanttitietokoneiden mahdollisia hyökkäyksiä vastaan.</string>
     <string name="quantum_resistant_info_second_paragaph">Tunneli torjuu hyökkäykset suorittamalla ylimääräisen avaimenvaihdon käyttämällä ensin kvanttiturvallista algoritmia, jonka tuloksen se sekoittaa WireGuardin tavalliseen salaukseen. Tämä ylimääräinen vaihe käyttää noin 500 kiB liikennettä joka kerta, kun uusi tunneli luodaan.</string>
     <string name="quantum_resistant_title">Kvanttihyökkäyksiä kestävä tunneli</string>
-    <string name="quantum_secure_connection">KVANTTISUOJATTU YHTEYS</string>
-    <string name="reconnecting">Yhdistetään uudelleen</string>
     <string name="redeem">Lunasta</string>
     <string name="redeem_voucher">Lunasta kuponki</string>
     <string name="remove_button">Poista</string>
@@ -262,8 +261,6 @@
     <string name="reset_to_default_button">Palauta oletusarvo</string>
     <string name="save">Tallenna</string>
     <string name="search_placeholder">Hae...</string>
-    <string name="secure_connection">SUOJATTU YHTEYS</string>
-    <string name="secured">Suojattu</string>
     <string name="select_location">Valitse sijainti</string>
     <string name="select_location_description">Kun yhteys on muodostettu, yksityinen ja suojattu sijainti valitulta alueelta naamioi todellisen sijaintisi.</string>
     <string name="select_location_empty_text_first_row">Ei tuloksia haulle &lt;b&gt;%1$s&lt;/b&gt;.</string>
@@ -275,7 +272,6 @@
     <string name="sent_contact">Tarvittaessa otamme sinuun yhteyttä osoitteeseen %1$s</string>
     <string name="sent_thanks">Kiitos!</string>
     <string name="server">Palvelin</string>
-    <string name="server_ip_overrides">Palvelimen IP-osoitteen ohitus</string>
     <string name="server_ip_overrides_active">Ohituksia on käytössä</string>
     <string name="server_ip_overrides_import_by">Uusien ohitusten tuontitapa</string>
     <string name="server_ip_overrides_import_by_file">Tiedosto</string>
@@ -328,9 +324,6 @@
     <string name="udp_over_tcp_port_info">Määrittää, mihin VPN-palvelimen TCP-porttiin \"UDP TCP:n kautta\" -hämäysteknologia-protokollan tulee muodostaa yhteys.</string>
     <string name="udp_over_tcp_port_title">Portti: UDP TPC:n kautta</string>
     <string name="undo">Kumoa</string>
-    <string name="unsecured">Suojaamaton</string>
-    <string name="unsecured_connection">SUOJAAMATON YHTEYS</string>
-    <string name="unsecured_vpn_permission_error">Suojaamaton (ei VPN-käyttöoikeutta)</string>
     <string name="unsupported_version">EI-TUETTU VERSIO</string>
     <string name="unsupported_version_description">Yksityisyytesi saattaa olla vaarassa tämän sovellusversion, jota ei tueta, vuoksi. Päivitä versio heti.</string>
     <string name="unsupported_version_without_upgrade">Sovellusversiotasi ei tueta.</string>
