--- a/android/lib/resource/src/main/res/values-ja/strings.xml
+++ b/android/lib/resource/src/main/res/values-ja/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">お客様への返信先を入力せずに問題の報告を送信しようとしています。ご報告に対する返信が必要な場合は、返信先のメールアドレスを入力する必要があります。</string>
     <string name="confirm_removal">はい。デバイスをログアウトさせます</string>
     <string name="congrats">おめでとうございます！</string>
-    <string name="connect">接続を保護する</string>
+    <string name="connect">接続</string>
+    <string name="connected">接続済み</string>
     <string name="connected_using_daita">%1$s を使用した %2$s</string>
-    <string name="connecting">接続中</string>
     <string name="connecting_to_daemon">Mullvad システムサービスに接続中...</string>
+    <string name="connection_details_in">内側</string>
     <string name="continue_login">ログインを続ける</string>
     <string name="copied_logs_to_clipboard">ログをクリップボードにコピーしました</string>
     <string name="copied_mullvad_account_number">Mullvadアカウント番号をクリップボードにコピーしました</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">リストの新規作成</string>
     <string name="created_x">作成日: %1$s</string>
     <string name="creating_new_account">アカウントを作成中...</string>
-    <string name="creating_secure_connection">セキュリティ保護接続を確立中</string>
     <string name="critical_error">重大なエラー (ご注意ください)</string>
     <string name="current_method">現在の設定: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">この設定を有効にするには、上記のすべての&lt;b&gt;%1$s&lt;/b&gt;を無効にしてください。</string>
@@ -117,12 +117,11 @@
     <string name="discard">破棄</string>
     <string name="discard_changes">変更内容を破棄しますか？</string>
     <string name="disconnect">接続解除</string>
-    <string name="disconnecting">接続解除中</string>
+    <string name="disconnected">未接続</string>
     <string name="dismiss">閉じる</string>
     <string name="dns_content_blockers_custom_dns_warning">注意: この設定を「&lt;b&gt;カスタムDNSサーバーを使う&lt;/b&gt;」と一緒に使用することはできません。</string>
     <string name="dns_content_blockers_info">この機能を有効にすると、広告、マルウェア、トラッカーなどの配信が確認されている特定のドメインまたはWebサイトへのデバイスの接続が阻止されます。</string>
     <string name="dns_content_blockers_subtitle">これらの設定を有効にするには、以下で&lt;b&gt;%1$s&lt;/b&gt;を無効にしてください。</string>
-    <string name="dns_content_blockers_title">DNSコンテンツブロッカー</string>
     <string name="dns_content_blockers_warning">これにより、特定のWebサイト、サービス、アプリで問題が発生する可能性があります。</string>
     <string name="dont_have_an_account">アカウント番号を持っていませんか？</string>
     <string name="duplicate_address_warning">このアドレスは入力済みです。</string>
@@ -151,6 +150,11 @@
     <string name="failed_to_set_current_test_error">現在の設定に設定できませんでした。API に到達できません</string>
     <string name="failed_to_set_current_unknown_error">現在の設定に設定できません。原因は不明です</string>
     <string name="faqs_and_guides">よくある質問とガイド</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_dns_content_blockers">DNSコンテンツブロッカー</string>
+    <string name="feature_lan_sharing">ローカルネットワーク共有</string>
+    <string name="feature_server_ip_override">サーバーIPのオーバーライド</string>
+    <string name="feature_udp_2_tcp">難読化</string>
     <string name="filter">絞り込み</string>
     <string name="filtered">絞り込み結果:</string>
     <string name="foreground_notification_channel_description">現在のVPNトンネルのステータスを表示します</string>
@@ -165,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">新しいオーバーライドをインポートすると、以前インポートしたオーバーライドが置き換えられる可能性があります。</string>
     <string name="import_overrides_import">インポート</string>
     <string name="import_overrides_text_title">テキストでインポート</string>
-    <string name="in_address">内側</string>
     <string name="invalid_dns_servers">カスタムDNSサーバーアドレス %1$s は無効です</string>
     <string name="invalid_voucher">バウチャーコードが無効です。</string>
     <string name="ipv6_unavailable">IPv6を設定できませんでした。アプリで無効にするか、デバイスで有効にしてください。</string>
@@ -176,7 +179,6 @@
     <string name="list_name">リスト名</string>
     <string name="loading_connecting">接続中...</string>
     <string name="loading_verifying">購入を確認中...</string>
-    <string name="local_network_sharing">ローカルネットワーク共有</string>
     <string name="local_network_sharing_additional_info">これは、トンネル外のネットワーク通信をローカルのマルチキャストおよびブロードキャスト範囲、および以下のプライベート IP 範囲との間で許可することによって行われます。</string>
     <string name="local_network_sharing_info">この機能は、共有、印刷、ストリーミングなどのため、ローカルネットワーク上の他デバイスへのアクセスを許可します。</string>
     <string name="location_added">%1$s (追加済み)</string>
@@ -247,12 +249,9 @@
     <string name="privacy_policy_label">プライバシーポリシー</string>
     <string name="problem_report_description">さらに効率よく問題解決できるよう、お使いのアプリのログファイルがこのメッセージに添付されます。個人データは匿名化された後に暗号化されたチャネルで送信されるため、その安全は確保され、公開されることはありません。</string>
     <string name="providers">プロバイダ</string>
-    <string name="quantum_creating_secure_connection">量子セキュア保護接続を確立中</string>
     <string name="quantum_resistant_info_first_paragaph">この機能は、WireGuardトンネルに量子コンピューターからの潜在的な攻撃に対する耐性を与えます。</string>
     <string name="quantum_resistant_info_second_paragaph">耐量子アルゴリズムで追加の鍵の交換を実行し、結果をWireGuardの通常の暗号化に混合させることで行われます。この追加ステップでは、新しいトンネルが確立されるたびに約500kiBのトラフィックが使用されます。</string>
     <string name="quantum_resistant_title">耐量子トンネル</string>
-    <string name="quantum_secure_connection">量子セキュア保護接続</string>
-    <string name="reconnecting">再接続中</string>
     <string name="redeem">使用する</string>
     <string name="redeem_voucher">バウチャーを使用する</string>
     <string name="remove_button">削除</string>
@@ -262,8 +261,6 @@
     <string name="reset_to_default_button">デフォルトにリセット</string>
     <string name="save">保存</string>
     <string name="search_placeholder">検索...</string>
-    <string name="secure_connection">セキュリティ保護された接続</string>
-    <string name="secured">セキュリティ保護されています</string>
     <string name="select_location">場所を選択する</string>
     <string name="select_location_description">接続中、あなたの実際の場所は選択した地域内の非公開かつセキュリティ保護された場所で隠されます。</string>
     <string name="select_location_empty_text_first_row">&lt;b&gt;%1$s&lt;/b&gt;に該当する検索結果はありません。</string>
@@ -275,7 +272,6 @@
     <string name="sent_contact">必要に応じて %1$s 宛にご連絡します　</string>
     <string name="sent_thanks">ありがとうございます！</string>
     <string name="server">サーバー</string>
-    <string name="server_ip_overrides">サーバーIPのオーバーライド</string>
     <string name="server_ip_overrides_active">オーバーライドは有効です</string>
     <string name="server_ip_overrides_import_by">新しいオーバーライドのインポート</string>
     <string name="server_ip_overrides_import_by_file">ファイル</string>
@@ -328,9 +324,6 @@
     <string name="udp_over_tcp_port_info">UDP-over-TCP難読化プロトコルで接続する必要のあるVPNサーバーのTCPポートです。</string>
     <string name="udp_over_tcp_port_title">UDP-over-TCPポート</string>
     <string name="undo">元に戻す</string>
-    <string name="unsecured">セキュリティ保護されていません</string>
-    <string name="unsecured_connection">セキュリティ保護されていない接続</string>
-    <string name="unsecured_vpn_permission_error">セキュリティ保護なし (VPN のアクセス許可なし)</string>
     <string name="unsupported_version">未対応のバージョン</string>
     <string name="unsupported_version_description">このアプリバージョンはサポートされていないため、プライバシーが危険にさらされる可能性があります。今すぐアップデートしてください。</string>
     <string name="unsupported_version_without_upgrade">サポート対象外バージョンのアプリを実行しています。</string>
