--- a/android/lib/resource/src/main/res/values-ko/strings.xml
+++ b/android/lib/resource/src/main/res/values-ko/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">연락처 없이 문제 보고서를 보내려고 합니다. 보고서에 대한 답변을 원하면 이메일 주소를 입력해야 합니다.</string>
     <string name="confirm_removal">예, 장치에서 로그아웃</string>
     <string name="congrats">축하합니다!</string>
-    <string name="connect">내 연결 보안 유지</string>
+    <string name="connect">연결</string>
+    <string name="connected">연결됨</string>
     <string name="connected_using_daita">%1$s 사용 %2$s</string>
-    <string name="connecting">연결 중</string>
     <string name="connecting_to_daemon">Mullvad 시스템 서비스에 연결하는 중...</string>
+    <string name="connection_details_in">인</string>
     <string name="continue_login">로그인 계속하기</string>
     <string name="copied_logs_to_clipboard">로그를 클립보드에 복사했습니다.</string>
     <string name="copied_mullvad_account_number">클립보드에 Mullvad 계정 번호 복사됨</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">새 목록 생성</string>
     <string name="created_x">생성 날짜: %1$s</string>
     <string name="creating_new_account">계정 생성 중...</string>
-    <string name="creating_secure_connection">보안 연결 생성 중</string>
     <string name="critical_error">심각한 오류(주의가 필요함)</string>
     <string name="current_method">현재: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">이 설정을 활성화하려면 위의 모든 &lt;b&gt;%1$s&lt;/b&gt;을(를) 비활성화하세요.</string>
@@ -117,12 +117,11 @@
     <string name="discard">취소</string>
     <string name="discard_changes">변경 사항을 취소하시겠습니까?</string>
     <string name="disconnect">연결 끊기</string>
-    <string name="disconnecting">연결 해제 중</string>
+    <string name="disconnected">연결 끊김</string>
     <string name="dismiss">해제</string>
     <string name="dns_content_blockers_custom_dns_warning">주의: 이 설정은 &lt;b&gt;사용자 지정 DNS 서버 사용&lt;/b&gt;과 함께 사용할 수 없습니다.</string>
     <string name="dns_content_blockers_info">이 기능이 활성화되면 광고, 맬웨어, 트래커 등을 배포하는 것으로 알려진 특정 도메인이나 웹사이트에 장치가 연결하지 않게 방지됩니다.</string>
     <string name="dns_content_blockers_subtitle">이 설정을 활성화하려면 아래의 &lt;b&gt;%1$s&lt;/b&gt;을(를) 비활성화하세요.</string>
-    <string name="dns_content_blockers_title">DNS 콘텐츠 차단기</string>
     <string name="dns_content_blockers_warning">이 기능을 사용하면 특정 웹 사이트, 서비스 및 앱에서 문제가 발생할 수 있습니다.</string>
     <string name="dont_have_an_account">계정 번호가 없으신가요?</string>
     <string name="duplicate_address_warning">이 주소는 이미 입력되었습니다.</string>
@@ -151,6 +150,11 @@
     <string name="failed_to_set_current_test_error">현재로 설정하지 못함 - API 연결 불가</string>
     <string name="failed_to_set_current_unknown_error">현재로 설정하지 못함 - 알 수 없는 이유</string>
     <string name="faqs_and_guides">FAQ 및 가이드</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_dns_content_blockers">DNS 콘텐츠 차단기</string>
+    <string name="feature_lan_sharing">로컬 네트워크 공유</string>
+    <string name="feature_server_ip_override">서버 IP 재정의</string>
+    <string name="feature_udp_2_tcp">난독 처리</string>
     <string name="filter">필터</string>
     <string name="filtered">필터링됨:</string>
     <string name="foreground_notification_channel_description">현재 VPN 터널 상태 표시</string>
@@ -165,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">새로운 재정의를 가져오면 이전에 가져온 일부 재정의가 교체될 수 있습니다.</string>
     <string name="import_overrides_import">가져오기</string>
     <string name="import_overrides_text_title">텍스트를 통해 가져오기</string>
-    <string name="in_address">인</string>
     <string name="invalid_dns_servers">사용자 지정 DNS 서버 주소 %1$s이(가) 잘못되었습니다.</string>
     <string name="invalid_voucher">유효하지 않은 바우처 코드입니다.</string>
     <string name="ipv6_unavailable">IPv6을 구성할 수 없습니다. 앱에서 비활성화하거나 장치에서 활성화하세요.</string>
@@ -176,7 +179,6 @@
     <string name="list_name">목록 이름</string>
     <string name="loading_connecting">연결 중...</string>
     <string name="loading_verifying">구매 확인 중...</string>
-    <string name="local_network_sharing">로컬 네트워크 공유</string>
     <string name="local_network_sharing_additional_info">이를 위해 터널 외부에서 로컬 멀티캐스트 및 브로드캐스트 범위는 물론 다음 개인 IP 범위와의 네트워크 통신을 허용합니다.</string>
     <string name="local_network_sharing_info">이 기능을 사용하면 공유, 인쇄, 스트리밍 등을 위해 로컬 네트워크의 다른 장치에 액세스할 수 있습니다.</string>
     <string name="location_added">%1$s(추가됨)</string>
@@ -247,12 +249,9 @@
     <string name="privacy_policy_label">개인정보 보호정책</string>
     <string name="problem_report_description">보다 효과적인 문제 해결을 위해 앱의 로그 파일이 이 메시지에 첨부됩니다. 사용자 데이터는 암호화된 채널을 통해 전송되기 전에 익명 처리되므로 안전하고 비공개로 유지됩니다.</string>
     <string name="providers">제공업체</string>
-    <string name="quantum_creating_secure_connection">양자 보안 연결 생성 중</string>
     <string name="quantum_resistant_info_first_paragaph">이 기능은 WireGuard 터널이 양자 컴퓨터의 잠재적인 공격에 맞서도록 합니다.</string>
     <string name="quantum_resistant_info_second_paragaph">이를 위해 양자 안전 알고리즘을 사용하여 추가 키 교환을 수행하고 결과를 WireGuard의 일반 암호화에 혼합하는 방법이 이용됩니다. 이 추가 단계는 새 터널이 설정될 때마다 약 500kiB의 트래픽을 사용합니다.</string>
     <string name="quantum_resistant_title">양자 저항 터널</string>
-    <string name="quantum_secure_connection">양자 보안 연결</string>
-    <string name="reconnecting">다시 연결 중</string>
     <string name="redeem">사용</string>
     <string name="redeem_voucher">바우처 사용</string>
     <string name="remove_button">제거</string>
@@ -262,8 +261,6 @@
     <string name="reset_to_default_button">기본값으로 재설정</string>
     <string name="save">저장</string>
     <string name="search_placeholder">검색...</string>
-    <string name="secure_connection">보안 연결</string>
-    <string name="secured">안전함</string>
     <string name="select_location">위치 선택</string>
     <string name="select_location_description">연결되어 있는 동안 실제 위치는 선택한 지역의 안전한 비공개 위치로 마스킹됩니다.</string>
     <string name="select_location_empty_text_first_row">&lt;b&gt;%1$s&lt;/b&gt;에 대한 결과가 없습니다.</string>
@@ -275,7 +272,6 @@
     <string name="sent_contact">필요한 경우 %1$s(으)로 연락드리겠습니다.</string>
     <string name="sent_thanks">감사합니다!</string>
     <string name="server">서버</string>
-    <string name="server_ip_overrides">서버 IP 재정의</string>
     <string name="server_ip_overrides_active">재정의 활성화</string>
     <string name="server_ip_overrides_import_by">다음으로 새로운 재정의 가져오기:</string>
     <string name="server_ip_overrides_import_by_file">파일</string>
@@ -328,9 +324,6 @@
     <string name="udp_over_tcp_port_info">UDP-over-TCP 난독 처리 프로토콜이 VPN 서버에서 연결해야 하는 TCP 포트입니다.</string>
     <string name="udp_over_tcp_port_title">UDP-over-TCP 포트</string>
     <string name="undo">실행 취소</string>
-    <string name="unsecured">안전하지 않음</string>
-    <string name="unsecured_connection">비보안 연결</string>
-    <string name="unsecured_vpn_permission_error">보안되지 않음(VPN 권한 없음)</string>
     <string name="unsupported_version">지원되지 않는 버전</string>
     <string name="unsupported_version_description">지원되지 않는 이 앱 버전으로 인해 개인 정보가 위험할 수 있습니다. 지금 업데이트하세요.</string>
     <string name="unsupported_version_without_upgrade">지원되지 않는 앱 버전을 실행 중입니다.</string>
