--- a/android/lib/resource/src/main/res/values-nb/strings.xml
+++ b/android/lib/resource/src/main/res/values-nb/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">Problemrapporten blir nå sendt uten en måte for oss å kontakte deg på. Hvis du ønsker svar på rapporten, må du oppgi en e-postadresse.</string>
     <string name="confirm_removal">Ja, logg av enhet</string>
     <string name="congrats">Gratulerer!</string>
-    <string name="connect">Gjør tilkoblingen sikker</string>
+    <string name="connect">Koble til</string>
+    <string name="connected">Tilkoblet</string>
     <string name="connected_using_daita">%1$s bruker %2$s</string>
-    <string name="connecting">Kobler til</string>
     <string name="connecting_to_daemon">Kobler til Mullvads systemtjeneste ...</string>
+    <string name="connection_details_in">Inngående</string>
     <string name="continue_login">Fortsett med pålogging</string>
     <string name="copied_logs_to_clipboard">Logger kopiert til utklippstavlen</string>
     <string name="copied_mullvad_account_number">Kopierte Mullvad-kontonummer til utklippstavlen</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">Opprett ny liste</string>
     <string name="created_x">Opprettet: %1$s</string>
     <string name="creating_new_account">Oppretter konto ...</string>
-    <string name="creating_secure_connection">OPPRETTER SIKKER TILKOBLING</string>
     <string name="critical_error">Kritisk feil (krever din oppmerksomhet)</string>
     <string name="current_method">Gjeldende: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Deaktiver alle &lt;b&gt;%1$s&lt;/b&gt; ovenfor for å aktivere denne innstillingen.</string>
@@ -117,12 +117,11 @@
     <string name="discard">Forkast</string>
     <string name="discard_changes">Forkaste endringer?</string>
     <string name="disconnect">Koble fra</string>
-    <string name="disconnecting">Kobler fra</string>
+    <string name="disconnected">Frakoblet</string>
     <string name="dismiss">Ignorer</string>
     <string name="dns_content_blockers_custom_dns_warning">OBS: Denne innstillingen kan ikke brukes sammen med &lt;b&gt;Bruk egendefinert DNS-server&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Når denne funksjonen er aktivert, forhindrer den enheten fra å kontakte bestemte domener og nettsteder som er kjent for å spre annonser, skadelig programvare, sporingsenheter og mer.</string>
     <string name="dns_content_blockers_subtitle">Deaktiver &lt;b&gt;%1$s&lt;/b&gt; under for å aktivere innstillingene.</string>
-    <string name="dns_content_blockers_title">DNS-innholdsblokkering</string>
     <string name="dns_content_blockers_warning">Dette kan føre til problemer på enkelte nettsteder, tjenester og apper.</string>
     <string name="dont_have_an_account">Har du ikke et kontonummer?</string>
     <string name="duplicate_address_warning">Denne adressen er allerede skrevet inn.</string>
@@ -151,6 +150,11 @@
     <string name="failed_to_set_current_test_error">Kunne ikke angi til gjeldende – API ikke tilgjengelig</string>
     <string name="failed_to_set_current_unknown_error">Kunne ikke angi til gjeldende – ukjent årsak</string>
     <string name="faqs_and_guides">Ofte stilte spørsmål og veiledninger</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_dns_content_blockers">DNS-innholdsblokkering</string>
+    <string name="feature_lan_sharing">Deling over lokalt nettverk</string>
+    <string name="feature_server_ip_override">Overstyring av server-IP</string>
+    <string name="feature_udp_2_tcp">Tilsløring</string>
     <string name="filter">Filter</string>
     <string name="filtered">Filtrert:</string>
     <string name="foreground_notification_channel_description">Viser gjeldende VPN-tunnelstatus</string>
@@ -165,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">Importering av nye overstyringer kan erstatte tidligere importerte overstyringer.</string>
     <string name="import_overrides_import">Importer</string>
     <string name="import_overrides_text_title">Importer via tekst</string>
-    <string name="in_address">Inngående</string>
     <string name="invalid_dns_servers">Egendefinerte DNS-serveradresser %1$s er ugyldige</string>
     <string name="invalid_voucher">Ugyldig kupongkode.</string>
     <string name="ipv6_unavailable">Kunne ikke konfigurere IPv6. Deaktiver den i appen eller aktiver den på enheten din.</string>
@@ -176,7 +179,6 @@
     <string name="list_name">Listenavn</string>
     <string name="loading_connecting">Kobler til ...</string>
     <string name="loading_verifying">Bekrefter kjøp ...</string>
-    <string name="local_network_sharing">Deling over lokalt nettverk</string>
     <string name="local_network_sharing_additional_info">Den gjør det ved å tillate nettverkkommunikasjon utenfor tunnelen til lokale multicast- og sendingsintervall, samt mellom følgende privat IP-intervall:</string>
     <string name="local_network_sharing_info">Funksjonen gir tilgang til andre enheter på det lokale nettverket for ting som deling, utskrift, strømming osv.</string>
     <string name="location_added">%1$s (lagt til)</string>
@@ -247,12 +249,9 @@
     <string name="privacy_policy_label">Retningslinjer for personvern</string>
     <string name="problem_report_description">For å kunne gi deg god nok hjelp vil loggfilen til appen ligge som vedlegg til meldingen. All data forblir beskyttet og privat gjennom anonymisering før det sendes gjennom en kryptert kanal.</string>
     <string name="providers">Leverandører</string>
-    <string name="quantum_creating_secure_connection">OPPRETTER KVANTESIKKER TILKOBLING</string>
     <string name="quantum_resistant_info_first_paragaph">Denne funksjonen gjør WireGuard-tunnelen motstandsdyktig mot potensielle angrep fra kvantemaskiner.</string>
     <string name="quantum_resistant_info_second_paragaph">Det gjøres ved at å utføre en ekstra nøkkelutveksling med en kvantesikker algoritme og kombinere resultatet med WireGuard sin vanlige kryptering. Dette ekstratrinnet bruker omtrent 500 kiB trafikk hver gang det opprettes en ny tunnel.</string>
     <string name="quantum_resistant_title">Kvantebestandig tunnel</string>
-    <string name="quantum_secure_connection">KVANTESIKKER TILKOBLING</string>
-    <string name="reconnecting">Kobler til på nytt</string>
     <string name="redeem">Løs inn</string>
     <string name="redeem_voucher">Løs inn kupong</string>
     <string name="remove_button">Fjern</string>
@@ -262,8 +261,6 @@
     <string name="reset_to_default_button">Tilbakestill til standard</string>
     <string name="save">Lagre</string>
     <string name="search_placeholder">Søk etter ...</string>
-    <string name="secure_connection">SIKKER TILKOBLING</string>
-    <string name="secured">Sikret</string>
     <string name="select_location">Velg plassering</string>
     <string name="select_location_description">Mens du er tilkoblet vil din egentlige plassering være skjult med en privat og sikker plassering i den valgte regionen.</string>
     <string name="select_location_empty_text_first_row">Ingen resultater for &lt;b&gt;%1$s&lt;/b&gt;.</string>
@@ -275,7 +272,6 @@
     <string name="sent_contact">Vi vil kontakte deg på %1$s ved behov</string>
     <string name="sent_thanks">Takk!</string>
     <string name="server">Server</string>
-    <string name="server_ip_overrides">Overstyring av server-IP</string>
     <string name="server_ip_overrides_active">Overstyringer aktive</string>
     <string name="server_ip_overrides_import_by">Importer nye overstyringer via</string>
     <string name="server_ip_overrides_import_by_file">Fil</string>
@@ -328,9 +324,6 @@
     <string name="udp_over_tcp_port_info">TCP-porten som UDP-over-TCP-tilsløringen skal koble til på VPN-serveren.</string>
     <string name="udp_over_tcp_port_title">UDP-over-TCP-port</string>
     <string name="undo">Angre</string>
-    <string name="unsecured">Usikret</string>
-    <string name="unsecured_connection">USIKKER TILKOBLING</string>
-    <string name="unsecured_vpn_permission_error">Usikret (ingen VPN-tillatelse)</string>
     <string name="unsupported_version">VERSJON UTEN STØTTE</string>
     <string name="unsupported_version_description">Personvernet ditt kan være i fare med denne appversjonen som ikke støttes. Oppdater nå.</string>
     <string name="unsupported_version_without_upgrade">Du kjører en appversjon som ikke støttes.</string>
