--- a/android/lib/resource/src/main/res/values-tr/strings.xml
+++ b/android/lib/resource/src/main/res/values-tr/strings.xml
@@ -73,10 +73,11 @@
     <string name="confirm_no_email">Sorun raporunu, size geri dönüş yapmamıza imkan vermeyen bir şekilde göndermek üzeresiniz. Sorununuz için yanıt almak istiyorsanız bir e-posta adresi girmelisiniz.</string>
     <string name="confirm_removal">Evet, cihazdan çıkış yap</string>
     <string name="congrats">Tebrikler!</string>
-    <string name="connect">Bağlantımı güvenceye al</string>
+    <string name="connect">Bağlan</string>
+    <string name="connected">Bağlandı</string>
     <string name="connected_using_daita">%1$s, %2$s kullanıyor</string>
-    <string name="connecting">Bağlanılıyor</string>
     <string name="connecting_to_daemon">Mullvad sistem hizmetlerine bağlanılıyor...</string>
+    <string name="connection_details_in">Giriş</string>
     <string name="continue_login">Giriş yapmak için devam et</string>
     <string name="copied_logs_to_clipboard">Günlükler panoya kopyalandı</string>
     <string name="copied_mullvad_account_number">Mullvad hesap numarası panoya kopyalandı</string>
@@ -87,7 +88,6 @@
     <string name="create_new_list">Yeni liste oluştur</string>
     <string name="created_x">Oluşturma tarihi: %1$s</string>
     <string name="creating_new_account">Hesap oluşturuluyor...</string>
-    <string name="creating_secure_connection">GÜVENLİ BAĞLANTI OLUŞTURULUYOR</string>
     <string name="critical_error">Kritik hata (Lütfen dikkatli olun)</string>
     <string name="current_method">Geçerli: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Bu ayarı etkinleştirmek için yukarıdaki &lt;b&gt;%1$s&lt;/b&gt; öğelerinin tümünü devre dışı bırakın.</string>
@@ -117,12 +117,11 @@
     <string name="discard">İptal et</string>
     <string name="discard_changes">Değişiklikler iptal edilsin mi?</string>
     <string name="disconnect">Bağlantıyı Kes</string>
-    <string name="disconnecting">Bağlantı kesiliyor</string>
+    <string name="disconnected">Bağlantı kesildi</string>
     <string name="dismiss">Reddet</string>
     <string name="dns_content_blockers_custom_dns_warning">Dikkat: Bu ayar &lt;b&gt;Özel DNS sunucusu kullan&lt;/b&gt; seçeneği ile birlikte kullanılamaz.</string>
     <string name="dns_content_blockers_info">Bu özellik etkinleştirildiğinde, cihazınızın reklamlar, kötü amaçlı yazılımlar, izleyiciler ve daha fazlasını dağıttığı bilinen belirli alan adlarıyla veya web siteleriyle iletişim kurmasını durdurur.</string>
     <string name="dns_content_blockers_subtitle">Bu ayarları etkinleştirmek için aşağıdaki &lt;b&gt;%1$s&lt;/b&gt; seçeneğini devre dışı bırakın.</string>
-    <string name="dns_content_blockers_title">DNS içerik engelleyiciler</string>
     <string name="dns_content_blockers_warning">Bu, belirli web sitelerinde, hizmetlerde ve uygulamalarda sorunlara neden olabilir.</string>
     <string name="dont_have_an_account">Hesap numaranız yok mu?</string>
     <string name="duplicate_address_warning">Bu adres zaten girilmiş.</string>
@@ -151,6 +150,11 @@
     <string name="failed_to_set_current_test_error">Geçerli olarak ayarlanamadı - API\'ye ulaşılamıyor</string>
     <string name="failed_to_set_current_unknown_error">Geçerli olarak ayarlanamadı - Bilinmeyen neden</string>
     <string name="faqs_and_guides">SSS ve Kılavuzlar</string>
+    <string name="feature_custom_mtu">MTU</string>
+    <string name="feature_dns_content_blockers">DNS içerik engelleyiciler</string>
+    <string name="feature_lan_sharing">Yerel ağ paylaşımı</string>
+    <string name="feature_server_ip_override">Sunucu IP\'sini geçersiz kılma</string>
+    <string name="feature_udp_2_tcp">Gizleme</string>
     <string name="filter">Filtrele</string>
     <string name="filtered">Filtrelendi:</string>
     <string name="foreground_notification_channel_description">Mevcut VPN tünelinin durumunu gösterir</string>
@@ -165,7 +169,6 @@
     <string name="import_overrides_bottom_sheet_override_warning">Yeni geçersiz kılmaların içe aktarılması, önceden içe aktarılan bazı geçersiz kılmaların yerine geçebilir.</string>
     <string name="import_overrides_import">İçe aktar</string>
     <string name="import_overrides_text_title">Metin yoluyla içe aktar</string>
-    <string name="in_address">Giriş</string>
     <string name="invalid_dns_servers">Özel DNS sunucu adresleri (%1$s) geçersiz</string>
     <string name="invalid_voucher">Kupon kodu geçersiz.</string>
     <string name="ipv6_unavailable">IPv6 yapılandırılamadı. IPv6\'yı uygulamada devre dışı bırakın veya cihazınızda etkinleştirin.</string>
@@ -176,7 +179,6 @@
     <string name="list_name">Liste adı</string>
     <string name="loading_connecting">Bağlanılıyor...</string>
     <string name="loading_verifying">Satın alma işlemi doğrulanıyor...</string>
-    <string name="local_network_sharing">Yerel ağ paylaşımı</string>
     <string name="local_network_sharing_additional_info">Bunu, yerel çok noktaya yayın ve yayın aralıklarının yanı sıra aşağıdaki özel IP aralıkları arasında tünel dışı ağ iletişimine izin vererek yapar:</string>
     <string name="local_network_sharing_info">Bu özellik; paylaşım, yazdırma, akış sağlama gibi özellikler için yerel ağdaki diğer cihazlara erişim izni verir.</string>
     <string name="location_added">%1$s (eklendi)</string>
@@ -247,12 +249,9 @@
     <string name="privacy_policy_label">Gizlilik politikası</string>
     <string name="problem_report_description">Size daha etkili bir şekilde yardımcı olmak için uygulamanızın günlük dosyası bu mesaja eklenecektir. Verileriniz şifrelenmiş bir kanal üzerinden gönderilmeden önce anonimleştirildiği için güvenli ve gizli kalacaktır.</string>
     <string name="providers">Hizmet sağlayıcılar</string>
-    <string name="quantum_creating_secure_connection">KUANTUM GÜVENLİ BAĞLANTISI OLUŞTURULUYOR</string>
     <string name="quantum_resistant_info_first_paragaph">Bu özellik, WireGuard tünelini kuantum bilgisayarlardan gelebilecek potansiyel saldırılara karşı dayanıklı hale getirir.</string>
     <string name="quantum_resistant_info_second_paragaph">Bu işlemi, bir kuantum güvenlik algoritmasıyla ekstra bir anahtar değişimi gerçekleştirdikten sonra sonucu WireGuard\'ın normal şifrelemesiyle karıştırarak yapar. Bu ekstra adım, her yeni tünel kurulduğunda yaklaşık 500 kiB trafik kullanır.</string>
     <string name="quantum_resistant_title">Kuantuma dayanıklı tünel</string>
-    <string name="quantum_secure_connection">KUANTUM GÜVENLİ BAĞLANTISI</string>
-    <string name="reconnecting">Yeniden Bağlanılıyor</string>
     <string name="redeem">Kullan</string>
     <string name="redeem_voucher">Kuponu kullan</string>
     <string name="remove_button">Kaldır</string>
@@ -262,8 +261,6 @@
     <string name="reset_to_default_button">Varsayılana sıfırla</string>
     <string name="save">Kaydet</string>
     <string name="search_placeholder">Ara...</string>
-    <string name="secure_connection">GÜVENLİ BAĞLANTI</string>
-    <string name="secured">Güvenli</string>
     <string name="select_location">Konum seçin</string>
     <string name="select_location_description">Bağlıyken gerçek konumunuz, seçilen bölgedeki özel ve gizli bir konumla maskelenir.</string>
     <string name="select_location_empty_text_first_row">&lt;b&gt;%1$s&lt;/b&gt; için sonuç bulunamadı.</string>
@@ -275,7 +272,6 @@
     <string name="sent_contact">Gerektiğinde sizinle %1$s adresinden iletişime geçeceğiz</string>
     <string name="sent_thanks">Teşekkürler!</string>
     <string name="server">Sunucu</string>
-    <string name="server_ip_overrides">Sunucu IP\'sini geçersiz kılma</string>
     <string name="server_ip_overrides_active">Geçersiz kılmalar etkin</string>
     <string name="server_ip_overrides_import_by">Şuradaki yeni geçersiz kılmaları içe aktar</string>
     <string name="server_ip_overrides_import_by_file">Dosya</string>
@@ -328,9 +324,6 @@
     <string name="udp_over_tcp_port_info">TCP üzerinden UDP gizleme protokolünün VPN sunucusunda hangi TCP portuna bağlanması gerekiyor.</string>
     <string name="udp_over_tcp_port_title">TCP üzerinden UDP portu</string>
     <string name="undo">Geri al</string>
-    <string name="unsecured">Güvenli değil</string>
-    <string name="unsecured_connection">GÜVENLİ OLMAYAN BAĞLANTI</string>
-    <string name="unsecured_vpn_permission_error">Güvenli değil (VPN izni yok)</string>
     <string name="unsupported_version">DESTEKLENMEYEN SÜRÜM</string>
     <string name="unsupported_version_description">Bu desteklenmeyen uygulama sürümüyle gizliliğiniz risk altında olabilir. Lütfen hemen güncelleyin.</string>
     <string name="unsupported_version_without_upgrade">Desteklenmeyen bir uygulama sürümünü kullanıyorsunuz.</string>
